@@ -1,4 +1,5 @@
 0.04
+ - Add some error checks to random_day() method.
 
 0.03 2013-11-07
  - Add dependency for perl (based on Error::Pure).
